; ModuleID = '/home/carl/AnghaBench/git/extr_hashmap.c_bucket.c'
source_filename = "/home/carl/AnghaBench/git/extr_hashmap.c_bucket.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.hashmap = type { i32 }
%struct.hashmap_entry = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.hashmap*, %struct.hashmap_entry*)* @bucket to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @bucket(%struct.hashmap* %0, %struct.hashmap_entry* %1) #0 {
  %3 = alloca %struct.hashmap*, align 8
  %4 = alloca %struct.hashmap_entry*, align 8
  store %struct.hashmap* %0, %struct.hashmap** %3, align 8
  store %struct.hashmap_entry* %1, %struct.hashmap_entry** %4, align 8
  %5 = load %struct.hashmap_entry*, %struct.hashmap_entry** %4, align 8
  %6 = getelementptr inbounds %struct.hashmap_entry, %struct.hashmap_entry* %5, i32 0, i32 0
  %7 = load i32, i32* %6, align 4
  %8 = load %struct.hashmap*, %struct.hashmap** %3, align 8
  %9 = getelementptr inbounds %struct.hashmap, %struct.hashmap* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = sub nsw i32 %10, 1
  %12 = and i32 %7, %11
  ret i32 %12
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
